--- a/httpdocs/index.css
+++ b/httpdocs/index.css
@@ -32,6 +32,19 @@
     --danger-text-color: #dc3545;
 }
 
+/** Bilder im Card-Element: mobile fix für Bootstrap. */
+    .card img {
+        max-width: calc(100vw - var(--bs-card-spacer-x) * 2 - (var(--bs-gutter-x) * .5)*2);
+    }
+
+    @media (min-width: 576px) {
+        .card img {
+            max-width: 100%;
+        }
+    }
+/** End of mobile fix für Bootstrap */
+
+
 body.survey {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
